# OpenVino-Driver-Behaviour

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_common.cmake  Dockerfile  README.adoc  entrypoint.sh  package.xml
AWS/: README.md
ActionRecognition/: action_recognition.py
ActionRecognition/include/: basicpubsub.py  config.py  result_renderer.py  steps.py
ActionRecognition/scripts/: download_models.sh
DriverBehavior/: CMakeLists.txt  CMakeLists_common.cmake
DriverBehavior/scripts/: create_list.py  list.lst  setupenv.sh
DriverBehavior/src/: classes.cpp  classes.hpp  cnn.cpp  customflags.hpp  detectors.hpp  main.cpp
DriverBehavior/truck.bag/: metadata.yaml  truck.bag.db3
UI/: README.md  config.ini  requirements.txt  webapp.py
UI/static/drivers/: README.md
UI/templates/: certificates.html  configuration.html  dashboard.html  downloads.html  driver-management.html  drivers.html  new-driver-management.html  template.html
UI/tmp/: README.md
models/FP16/: action-recognition-0001-decoder.xml  action-recognition-0001-encoder.xml  driver-action-recognition-adas-0002-decoder.xml  driver-action-recognition-adas-0002-encoder.xml  emotions-recognition-retail-0003.xml  face-detection-adas-0001.xml  face-detection-retail-0004.xml  face-detection-retail-0005.xml  face-reidentification-retail-0095.xml  head-pose-estimation-adas-0001.xml  landmarks-regression-retail-0009.xml  pedestrian-and-vehicle-detector-adas-0001.xml  person-reidentification-retail-0031.xml  person-reidentification-retail-0076.xml  person-vehicle-bike-detection-crossroad-1016.xml
models/FP32/: action-recognition-0001-decoder.xml  action-recognition-0001-encoder.xml  driver-action-recognition-adas-0002-decoder.xml  driver-action-recognition-adas-0002-encoder.xml  emotions-recognition-retail-0003.xml  face-detection-adas-0001.xml  face-detection-retail-0004.xml  face-detection-retail-0005.xml  face-reidentification-retail-0095.xml  head-pose-estimation-adas-0001.xml  landmarks-regression-retail-0009.xml  pedestrian-and-vehicle-detector-adas-0001.xml  person-reidentification-retail-0031.xml  person-reidentification-retail-0076.xml  person-vehicle-bike-detection-crossroad-1016.xml
models/INT8/: emotions-recognition-retail-0003.xml  face-detection-adas-0001.xml  face-detection-retail-0004.xml  face-detection-retail-0005.xml  head-pose-estimation-adas-0001.xml  person-reidentification-retail-0031.xml  person-reidentification-retail-0076.xml
scripts/: faces_gallery.json  setupenv.sh
src/: classes.cpp  classes.hpp  cnn.cpp  cnn.hpp  customflags.hpp  detectors.cpp  detectors.hpp  main.cpp  reid_gallery.cpp  tracker.cpp
