<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>driver_behavior</name>
  <version>0.1.0</version>
  <description>
    ETS2/ATS sample client
  </description>
  <maintainer email="hernan.gonzalez@incluit.com">Hernán Gonzalez</maintainer>
  <maintainer email="flavio.priotti@incluit.com">Flavio Priotti</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ets_msgs</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ets_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
